--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,7 +216,25 @@ input[type=submit] {
   border: 0 none;
 }
 @media screen and (max-width: 980px) {
-  .main-section {
-    width: 70%;
+    .main-container {
+    width: 100%;
   }
- }
+}
+@media screen and (max-width: 768px) {
+    .main-container {
+      width: 100%;
+  }
+}
+@media screen and (max-width: 640px) {
+   .main-container {
+     width: 80%
+   }
+    #logo {
+     width:98%;
+     clear:both;
+     } 
+   }
+    
+    
+
+
