--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,11 @@
+/*@import url('https://fonts.googleapis.com/css?family=Nunito:300,400,700'); */
+
 body {
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: 'Nunito', sans-serif;
   font-size: 18px;
   line-height: 34px;
-  color: #777777;
-  background: url("../images/concrete_seamless.png");
+  color: #141111;
+  background-image: url("https://cdn.pixabay.com/photo/2015/03/27/20/54/continents-695188_960_720.jpg");
 }
 
 * {
@@ -33,9 +35,9 @@ p:last-child {
 h1,
 h2,
 h3 {
-  font-family: Georgia, Times, "Times New Roman", serif;
+  font-family: 'Nunito', sans-serif;
   font-weight: 700;
-  color: #4aaaa5;
+  color: #020b1b;
 }
 
 h1 {
@@ -58,23 +60,27 @@ h3 {
   width: 100%;
   margin: 0 0 30px;
   overflow: auto;
-  color: #ffffff;
-  background: #ffffff;
+  color: #000000;
+  background: linear-gradient(to right,
+  rgb(93, 4, 4),
+  rgb(168, 53, 7),
+  rgb(2, 25, 90));
+  justify-content: center;
   border-bottom: 2px solid #cccccc;
 }
 
 #logo {
   float: left;
-  width: 250px;
+  width: 400px;
   height: 90px;
-  font-family: Georgia, Times, "Times New Roman", serif;
+  font-family: 'Nunito', sans-serif;
   font-size: 30px;
   font-weight: 700;
   line-height: 90px;
   color: #ffffff;
   text-align: center;
   text-decoration: none;
-  background: #4aaaa5;
+  background: #620e0e;
 }
 
 nav {
@@ -87,7 +93,7 @@ nav a {
   padding-left: 15px;
   margin-left: 15px;
   line-height: 18px;
-  color: #999;
+  color: rgb(224, 207, 207);
   text-decoration: none;
   border-left: 1px solid #efefef;
 }
@@ -105,8 +111,12 @@ footer {
   color: #ffffff;
   color: #cccccc;
   text-align: center;
-  background: #666666;
-  border-top: 8px solid #4aaaa5;
+  background: linear-gradient(to right,
+  rgb(3, 4, 73),
+  rgb(172, 55, 8),
+  rgb(73, 4, 4));
+  justify-content: center;
+  border-top: 8px solid #530404;
   height: 50px;
 }
 
@@ -130,7 +140,7 @@ h3, h2 {
   max-width: 960px;
   padding: 30px;
   margin: 0 0 40px;
-  background: #ffffff;
+  background: #c6cbd1;
   border: 1px solid #dddddd;
 }
 
@@ -164,7 +174,7 @@ h3, h2 {
   line-height: 30px;
   color: #ffffff;
   text-align: center;
-  background: #4aaaa5;
+  background: #8385da;
   border-bottom: 0;
 }
 
@@ -212,7 +222,7 @@ input[type=submit] {
   font-size: 18px;
   color: #ffffff;
   cursor: pointer;
-  background: #4aaaa5;
+  background: #4751a5;
   border: 0 none;
 }
 @media screen and (max-width: 980px) {
@@ -234,6 +244,7 @@ input[type=submit] {
      clear:both;
      } 
    }
+   
     
     
 
